feat: add  adaptiv 640px footer

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -193,7 +193,7 @@
                     <div class="works">
                         <h3 class="title works__title">How it works</h3>
                         <div class="works__wrap">
-                            <div class="works__box">
+                            <div class="works__box works__box--arrow-green">
                                 <div class="works__contrainer">
                                     <img class="works__contrainer-img" src="../../assets/images/hand_pay.svg" alt="hand__pay">
                                 </div>
@@ -202,7 +202,7 @@
                             <div class="works__arrow">
                                 <img class="works__arrow-img" src="../../assets/images/arrow.svg" alt="arrow">
                             </div>
-                            <div class="works__box">
+                            <div class="works__box works__box--arrow-green">
                                 <div class="works__contrainer">
                                     <img class="works__contrainer-img" src="../../assets/images/hand flower.svg" alt="hand__pay">
                                 </div>
