--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -83,6 +83,7 @@
                     </div>
                 </div>
                 <picture class="backstage__flower">
+                    <source media="(max-width: 320px)" srcset="../../assets/images/media__img/320px/flower_foto1.png">
                     <source media="(max-width: 999px)" srcset="../../assets/images/media__img/flower_foto1.png">
                     <img class="backstage__flower-img" src="../../assets/images/flower_foto1.jpg" alt="flower">
                 </picture>
@@ -167,19 +168,14 @@
                 <picture class="slider__wrap-flower">
                     <source media="(max-width: 640px)" srcset="../../assets/images/media__img/640px/palm_foto.png">
                     <source media="(max-width: 1599px)" srcset="../../assets/images/media__img/palm_foto.png">
-                    <img class="slider__flower" src="../../assets/images/palm_foto.jpg" alt="flower">
-                    <!-- <div class="slider__wrap-flower">
-                    </div> -->
+                    <img class="slider__flower" src="../../assets/images/palm_foto.jpg" alt="flower"> 
                 </picture>
                 <picture class="slider__wrap-flower slider__wrap-flower--right">
                     <source media="(max-width: 640px)" srcset="../../assets/images/media__img/640px/strelitzia.png">
                     <source media="(max-width: 1599px)" srcset="../../assets/images/media__img/strelitzia_1.png">
                     <img class="slider__flower" src="../../assets/images/strelitzia 1.jpg" alt="flower">
                 </picture>
-                <!-- <div class="slider__wrap-flower slider__wrap-flower--right">
-                    
-                </div> -->
-        </section>
+        </section><!--
         <section class="pick">
             <div class="container">
                 <div class="pick__inner">
@@ -392,7 +388,7 @@
                
             </div>
         </div>
-    </footer>
+    </footer> -->
     <script src="https://kit.fontawesome.com/78c2d78b1c.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </body>
