fixed: delete comment in html

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -175,7 +175,7 @@
                     <source media="(max-width: 1599px)" srcset="../../assets/images/media__img/strelitzia_1.png">
                     <img class="slider__flower" src="../../assets/images/strelitzia 1.jpg" alt="flower">
                 </picture>
-        </section><!--
+        </section>
         <section class="pick">
             <div class="container">
                 <div class="pick__inner">
@@ -388,7 +388,7 @@
                
             </div>
         </div>
-    </footer> -->
+    </footer> 
     <script src="https://kit.fontawesome.com/78c2d78b1c.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </body>
