--- a/online-zoo/pages/donate/index.html
+++ b/online-zoo/pages/donate/index.html
@@ -24,7 +24,7 @@
                 <nav class="navigation">
                     <ul class="navigation__list">
                         <li class="navigation__item">
-                            <a href="../main/index.html" class="navigation__link">About</a>
+                            <a href="./index.html" class="navigation__link navigation__link--activ">About</a>
                         </li>
                         <li class="navigation__item">
                             <a href="#" class="navigation__link">Map</a>
@@ -33,12 +33,47 @@
                             <a href="#" class="navigation__link">Zoos</a>
                         </li>
                         <li class="navigation__item">
-                            <a href="../donate/index.html" class="navigation__link navigation__link--activ">Donate</a>
+                            <a href="../donate/index.html" class="navigation__link">Donate</a>
                         </li>
                         <li class="navigation__item">
                             <a href="#" class="navigation__link">Contact us</a>
                         </li>
                     </ul>
+                    <div class="burger__icon">
+                        <img src="../../assets/images/media__img/burger_menu.svg" alt="">
+                    </div>
+                    <div class="burger ">
+                        <div class="burger__wrap">
+                            <div class="close__burger">
+                                    <img src="../../assets/images/x_icon.svg" alt="">
+                            </div>
+                            <h2 class="title burger__title">
+                                PetStory online
+                            </h2>
+                            <ul class="burger__menu">
+                                <li class="burger__item">
+                                    <a href="./index.html" class="burger__link ">About</a>
+                                </li>
+                                <li class="burger__item">
+                                    <a href="#" class="burger__link">Map</a>
+                                </li>
+                                <li class="burger__item">
+                                    <a href="#" class="burger__link">Zoos</a>
+                                </li>
+                                <li class="burger__item">
+                                    <a href="../donate/index.html" class="burger__link">Donate</a>
+                                </li>
+                                <li class="burger__item">
+                                    <a href="#" class="burger__link">Contact us</a>
+                                </li>
+                            </ul>
+                            <div class="burger__designed">
+                                <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online">
+                                    <span class="designed__text">Designed by ©</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </nav>
                 <div class="designed">
                     <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online">
