--- a/online-zoo/pages/donate/index.html
+++ b/online-zoo/pages/donate/index.html
@@ -287,5 +287,6 @@
         </div>
     </footer>
     <script src="https://kit.fontawesome.com/78c2d78b1c.js" crossorigin="anonymous"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
