fix: link burger donate

--- a/online-zoo/pages/donate/index.html
+++ b/online-zoo/pages/donate/index.html
@@ -52,7 +52,7 @@
                             </h2>
                             <ul class="burger__menu">
                                 <li class="burger__item">
-                                    <a href="./index.html" class="burger__link ">About</a>
+                                    <a href="../main/index.html" class="burger__link ">About</a>
                                 </li>
                                 <li class="burger__item">
                                     <a href="#" class="burger__link">Map</a>
@@ -61,7 +61,7 @@
                                     <a href="#" class="burger__link">Zoos</a>
                                 </li>
                                 <li class="burger__item">
-                                    <a href="../donate/index.html" class="burger__link">Donate</a>
+                                    <a href="./index.html" class="burger__link">Donate</a>
                                 </li>
                                 <li class="burger__item">
                                     <a href="#" class="burger__link">Contact us</a>
