feat: redaction cv

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Document</title>
 </head>
+
 <body>
     <button class="button-top">
         <i class="fa-solid fa-2xl fa-angles-up"></i>
@@ -20,7 +22,7 @@
                         <a href="#about" class="navigation__link">About
                             <span class="navigation__border"></span>
                         </a>
-                    </li> 
+                    </li>
                     <li class="navigation__item">
                         <a href="#skills" class="navigation__link">Skills
                             <span class="navigation__border"></span>
@@ -58,20 +60,19 @@
                         <img class="avatar__img" src="images/akali.jpg" alt="photo__avatar">
                     </div>
                     <h1 class="title avatar__hi">Hi, I'm Vladislav</h1>
-                    <h2 class="title avatar__hi">student rooling scopes</h2>
                     <div class="about">
                         <p class="about__text">
-                            I'm from Belarus 
+                            I'm from Belarus
                         </p>
                         <p class="about__text">
-                            I am 21 years old
+                            I am 22 years old
                         </p>
                         <p class="about__text">
-                            I want to become a frontend developer
+                            I want to become a frontend developer or backend developer (fullstack)
                         </p>
                     </div>
                 </div>
-                
+
             </div>
         </section>
         <section class="skills" id="skills">
@@ -79,38 +80,56 @@
                 <h2 class="title skills__title">My skills</h2>
                 <ul class="skills__list">
                     <li class="skills__item">
-                        <span class="skills__item-text">HTML</span> 
+                        <span class="skills__item-text">HTML</span>
                         <div class="skills__item-box">
                             <img class="skills__item-icon" src="images/file_type_html_icon_130541.svg" alt="HTML logo">
                         </div>
                     </li>
                     <li class="skills__item">
                         <div class="skills__item-wrapper">
-                            <span class="skills__item-text">CSS  </span>
-                            <div class="skills__item-box">
-                                <img class="skills__item-icon" src="images/css-3.svg" alt="CSS logo">
-                            </div>
+                            <span class="skills__item-text">CSS </span>
+                            <img class="skills__item-icon" src="images/css-3.svg" alt="CSS logo">
                         </div>
+                    <li class="skills__item">
                         <div class="skills__item-wrapper">
-                            <span class="skills__item-text">SASS  </span>
-                            <div class="skills__item-box">
-                                    <img class="skills__item-icon" src="images/sass.svg " alt="CSS logo">
-                                </div>
-                        </div>
-                        <div class="skills__item-wrapper">
-                            <span class="skills__item-text">BEM  </span>
+                            <span class="skills__item-text">SASS</span>
+                            <img class="skills__item-icon" src="images/sass.svg " alt="LOGO Sass">
                         </div>
                     </li>
                     <li class="skills__item">
                         <div class="skills__item-wrapper">
                             <span class="skills__item-text">JavaScript(Basic)</span>
-                            <img class="skills__item-icon" src="images/javascript-1.svg" alt="LOGO JS">
+                            <img class="skills__item-icon" src="images/javascript-1.svg" alt="logo js">
                         </div>
                     </li>
                     <li class="skills__item">
                         <div class="skills__item-wrapper">
-                            <span class="skills__item-text">GitHub(Basic)</span>
-                            <img class="skills__item-icon" src="images/github-icon-1.svg" alt="LOGO JS">
+                            <span class="skills__item-text">React</span>
+                            <img class="skills__item-icon" src="images/react.svg" alt="logo react">
+                        </div>
+                    </li>
+                    <li class="skills__item">
+                        <div class="skills__item-wrapper">
+                            <span class="skills__item-text">TypeScript</span>
+                            <img class="skills__item-icon" src="images/ts.svg" alt="logo ts">
+                        </div>
+                    </li>
+                    <li class="skills__item">
+                        <div class="skills__item-wrapper">
+                            <span class="skills__item-text">NodeJS</span>
+                            <img class="skills__item-icon" src="images/nodejs.svg" alt="logo nodejs">
+                        </div>
+                    </li>
+                    <li class="skills__item">
+                        <div class="skills__item-wrapper">
+                            <span class="skills__item-text">PostgreSql</span>
+                            <img class="skills__item-icon" src="images/postgresql.svg" alt="logo sql">
+                        </div>
+                    </li>
+                    <li class="skills__item">
+                        <div class="skills__item-wrapper">
+                            <span class="skills__item-text">GitHub</span>
+                            <img class="skills__item-icon" src="images/github-icon-1.svg" alt="logo git">
                         </div>
                     </li>
                 </ul>
@@ -120,30 +139,16 @@
             <div class="container">
                 <div class="experience__inner">
                     <h2 class="title experience__title">Experience</h2>
-                    <p class="experience__text">Experience only within the training course</p>
-                    <div class="project__travel">
-                        <a href="https://vladpro42.github.io/rsschool-cv-Stage-0/travel/" class="project__link">
-                            <div class="project__text">
-                                Travel is a stage#0 task during which you will create a landing page
-                                <br> for a travel planning website, make it adaptive and interactive.
-                            </div>  
-                            <div class="project__img travel">
-                                <!-- <img src="images/travel.jpg" alt=""> -->
-                            </div>
+                    <div class="projects">
+                        <a href="https://kanban-rust-ten.vercel.app/" class="project__link">
+                            Todo List (click me)
                         </a>
-                    </div>
-                    <div class="project__momentum">
-                        <a href="https://vladpro42.github.io/rsschool-cv-Stage-0/momentum/" class="project__link">
-                            <div class="project__text">
-                                Momentum is an analogue of the Chrome Web Store application <br> the same name. application shows the time and username. The  <br> background  image and greeting changes depending on the time <br> of day.
-                            </div>  
-                            <div class="project__img momentum">
-                                <!-- <img src="images/travel.jpg" alt=""> -->
-                            </div>
+                        <a href="https://momentum-ts.vercel.app/" class="project__link">
+                            momentum-ts (click me)
                         </a>
-                    </div>
                     </div>
                 </div>
+            </div>
         </section>
         <section class="languages" id="languages">
             <div class="container">
@@ -151,7 +156,7 @@
                     <h2 class="title languages__title">Languages</h2>
                     <div class="languages__wrap-text">
                         <p class="languages__text">Russian native</p>
-                        <p class="languages__text">English A1</p>
+                        <p class="languages__text">English Pre-Intermediate A2</p>
                     </div>
                 </div>
             </div>
@@ -161,26 +166,10 @@
                 <div class="education__inner">
                     <h2 class="title education__title">Education</h2>
                     <p class="education__text">course «JavaScript/Front-end» Stage #0</p>
-                    <p class="education__text">Secondary specialized education in the specialty "Automated electric drive"</p>
+                    <p class="education__text">Secondary specialized education in the specialty "Automated electric
+                        drive"</p>
+                    <p class="education__text">I've been studying programming for a year and a half</p>
                 </div>
-            </div>
-        </section>
-        <section class="code-example">
-            <div class="container">
-                <h2 class="title code-example__title">Code example</h2>
-                <pre class="code-example__box">
-                    <code>
-    function showGreetings(arrow) {
-        let res; 
-        arrow.forEach( item => {
-            if(item === 'Hello world') {
-                res = item;
-            }
-        });
-        return res;
-    }
-                    </code>
-                </pre>
             </div>
         </section>
     </main>
@@ -206,4 +195,5 @@
     <script src="https://kit.fontawesome.com/78c2d78b1c.js" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
 </body>
+
 </html>
