feat: add contact

--- a/index.html
+++ b/index.html
@@ -185,8 +185,14 @@
                     <span class="footer__years">2022</span>
                 </li>
                 <li class="footer__item">
-                    <a href="https://rs.school/js/" class="footer__link">
-                        <img src="images/roolingScopes.svg" alt="Rooling scopes Logo">
+                    <a style="color: white;" href="tel:+375298504989" class="footer__link footer__years">
+                        +375298504989
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a style="color: white;" href="mailto:bondarev.vlad.01@gmail.com"
+                        class="footer__link footer__years">
+                        bondarev.vlad.01@gmail.com
                     </a>
                 </li>
             </ul>
